--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.jumbotron {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/Joe_Rogan.png/220px-Joe_Rogan.png");
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+}
 body {
   margin-top: 60px;
 }
